# friendly-spork

./: README.md  pyproject.toml
src/: __main__.py
src/utils/video/: count_frames.py  filevideostream.py  fps.py  pivdeostream.py  stream.py  videostream.py  webcamvideostream.py
