[tool.poetry]
name = "friendly-spork"
version = "0.1.0"
description = ""
authors = ["Leon Bowie <leon@bowie-co.nz>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
